--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,7 @@
         <item name="android:padding">@dimen/profile_setting_text_padding</item>
         <item name="android:gravity">left</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:layout_weight">1</item>
     </style>
 
@@ -54,6 +55,7 @@
         <item name="android:padding">@dimen/profile_setting_text_padding</item>
         <item name="android:gravity">right</item>
         <item name="android:textStyle">italic</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:layout_weight">1</item>
     </style>
 
