--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,8 @@
     <style name="profile_setting_right_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textSize">@dimen/profile_setting_field_name_text_size</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:padding">@dimen/profile_setting_text_padding</item>
